		Swapped the cursors used for sabotaging and capturing buildings/units.
		Added Ctrl+T shortcut for selection of all units matching the types of the currently selected ones across the screen and map.
		Added a toggle spectators to multiplayer.
		Removed the ability of commandos to plant C4 on walls.
		Order lines are now shown on unit selection.
	Dune 2000:
		Added the Atreides grenadier from the 1.06 patch.
		Added randomized tiles for Sand and Rock terrain.
		Shroud is now displayed by default again (disable it in the lobby settings).
		Removed the build radius restrictions.
		Added the BLOXXMAS terrain tiles from the 1.06 patch.
		Saboteur can now plant C4 on vehicles.
	Red Alert:
		Transports will now open their doors when at shore.
		Tanya can now plant C4 on bridges.
		Submarine torpedoes can now hit bridges when force fired.
		Increased torpedo splash damage and raised multiplier vs. concrete.
		Fixed transparency glitches in the sniper icon.
		Removed health bars and selection boxes from walls.
		Fixed Tanya being unavailable after using the Chronosphere on a vehicle she is in.
		Tanya can now plant C4 on vehicles.
		Parachute bomb air strike will reveal the whole target area.
		Adjusted AA Guns to fire their guns alternately at a high fire rate, and added contrails to their bullets.
		Decreased AA Gun ZSU-23 damage from 25 to 12.
		Increased SAM Site power cost from -20 to -40.
		Decreased SAM Site Nike damage from 100 to 50.
		Added a snow variation of the Allied Barracks by Kilkakon.
		Added a desert variation of the Allied Barracks by Kilkakon.
		Added a desert variation of the Missile Silo by Kilkakon.
		Removed the temperate shellmap and improved the design and performance of the desert shellmap.
	Tiberian Dawn:
		Commando can now plant C4 on bridges.
		Added the Asset Browser to the Extras menu.
		Removed health bars and selection boxes from walls.
		Changed Nod Obelisk HP to 600 from 400, same as Advanced Guard Tower